--- a/transactionLogger/package.json
+++ b/transactionLogger/package.json
@@ -16,7 +16,8 @@
     "npm": "^10.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "sweetalert2": "^11.12.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
